--- a/index.html
+++ b/index.html
@@ -2,20 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>P2pchat</title>
-    <link rel="stylesheet" type="text/css" href="assets/style.css">
+    <title>p2pcache-test</title>
+    <script src="bundle.js"></script>
+
 </head>
 <body>
-<div id="bobbles"></div>
-<div class="readArea">
-    <textarea id="msgBox" readonly></textarea>
-</div>
-<div class="writeArea">
-    <input type="text" placeholder="some text..." id="msgInput">
-    <button id="sendBtn">
-        <img src="assets/email.png" width="32" height="32"/>
-    </button>
-</div>
+
 </body>
-<script src="bundle.js"></script>
 </html>
